# python-gui

./: .gitignore  README.md  gui.py  gui.qml  gui.service  setup.cfg  setup.py
