# see https://packaging.python.org/guides/distributing-packages-using-setuptools/
[metadata]
name = gui
version = 1.0.0
description = Simple Console PySide2 GUI
url = https://github.com/lbt/python-gui
author = David Greaves
author_email = david@dgreaves.com
license = GPLv3
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GPLv3 License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
project_urls =
    Documentation = https://github.com/lbt/python-gui
    Source = https://github.com/lbt/python-gui
    Tracker = https://github.com/lbt/python-gui

[options]
packages = find:
include_package_data = True
install_requires =
    pkg-resources              >= 0.0.0

# Packages for Qt support:
# apt install python3-pyside2.qtcore python3-pyside2.qtgui python3-pyside2.qtnetwork python3-pyside2.qtqml python3-pyside2.qtquick python3-pyside2.qttest python3-pyside2.qtwidgets

python_requires = >=3.9
